[gd_scene load_steps=16 format=3 uid="uid://do6quggbisn8b"]

[ext_resource type="Script" uid="uid://dg51vm8otm1sv" path="res://utility/hurtbox.gd" id="1_0xwu0"]
[ext_resource type="Script" uid="uid://dlh8fp4ya1d7" path="res://entity/enemies/boss_test/boss_test.gd" id="1_kdjat"]
[ext_resource type="Texture2D" uid="uid://cg3erwv4h4o36" path="res://entity/enemies/boss_test/sprites/Boss.png" id="2_1h1ja"]
[ext_resource type="Texture2D" uid="uid://banlf1kodeet7" path="res://entity/enemies/boss_test/sprites/Arrow.png" id="2_styxq"]
[ext_resource type="Script" uid="uid://cb7kjybgprksw" path="res://utility/health.gd" id="4_iogun"]
[ext_resource type="Script" uid="uid://dtx2phdcbh8yh" path="res://entity/enemies/boss_test/state_stuff/state_machine.gd" id="5_5xclg"]
[ext_resource type="Script" uid="uid://bxtn0kmgif720" path="res://entity/enemies/boss_test/state_stuff/boss_wander.gd" id="6_iogun"]
[ext_resource type="Script" uid="uid://buw4a5aww2rk4" path="res://utility/hitbox.gd" id="7_5xclg"]
[ext_resource type="Script" uid="uid://bqcefypn5ivna" path="res://entity/enemies/boss_test/state_stuff/chasing_player.gd" id="8_6kf81"]
[ext_resource type="Script" uid="uid://dssao51ld64r5" path="res://entity/enemies/boss_test/state_stuff/charge_player.gd" id="10_m0jc7"]
[ext_resource type="Script" uid="uid://c275h8lt00n1y" path="res://entity/enemies/boss_test/state_stuff/shooting_player.gd" id="11_m0jc7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kdjat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1h1ja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0jc7"]
size = Vector2(14, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gobpw"]
size = Vector2(12, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj7kb"]
size = Vector2(8, 17)

[node name="BossTest" type="CharacterBody2D"]
process_mode = 1
collision_layer = 16
collision_mask = 16
script = ExtResource("1_kdjat")

[node name="Indicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
texture = ExtResource("2_styxq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_kdjat")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_iogun")
max_health = 50
metadata/_custom_type_script = "uid://cb7kjybgprksw"

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
script = ExtResource("1_0xwu0")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://dg51vm8otm1sv"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_m0jc7")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0
script = ExtResource("7_5xclg")
metadata/_custom_type_script = "uid://buw4a5aww2rk4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_gobpw")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_5xclg")
initial_state = NodePath("BossWander")

[node name="BossWander" type="Node" parent="State Machine" node_paths=PackedStringArray("boss")]
script = ExtResource("6_iogun")
boss = NodePath("../..")

[node name="ChasingPlayer" type="Node" parent="State Machine" node_paths=PackedStringArray("boss")]
script = ExtResource("8_6kf81")
boss = NodePath("../..")

[node name="ChargePlayer" type="Node" parent="State Machine" node_paths=PackedStringArray("boss")]
script = ExtResource("10_m0jc7")
boss = NodePath("../..")

[node name="ShootingPlayer" type="Node" parent="State Machine" node_paths=PackedStringArray("boss")]
script = ExtResource("11_m0jc7")
boss = NodePath("../..")

[node name="AbilityCD" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="ChaseCD" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qj7kb")

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
